# mlpstamp

./: .bandit  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  __main__.py  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
cookiecutter/: repository.py
docs/: cli_options.rst  conf.py  cookiecutter.rst  index.rst  installation.rst  overview.rst  troubleshooting.rst  usage.rst
docs/_templates/: package.rst_t
docs/advanced/: boolean_variables.rst  calling_from_python.rst  choice_variables.rst  copy_without_render.rst  dict_variables.rst  directories.rst  hooks.rst  human_readable_prompts.rst  index.rst  injecting_context.rst  local_extensions.rst  nested_config_files.rst  new_line_characters.rst  private_variables.rst  replay.rst  suppressing_prompts.rst  template_extensions.rst  templates.rst  templates_in_context.rst  user_config.rst
docs/tutorials/: index.rst  tutorial1.rst  tutorial2.rst
mlpstamps/: cli.py  environment.py  exceptions.py  find.py  generate.py  hooks.py  log.py  prompt.py  replay.py  repository.py  utils.py
src/mlpstamp/: __init__.py
src/mlpstamps/: __main__.py  cli.py  config.py  filezip.py  main.py  repository.py  vcs.py
tests/: conftest.py  test_abort_generate_on_hook_error.py  test_cli.py  test_cookiecutter_invocation.py  test_custom_extensions_in_hooks.py  test_default_extensions.py  test_environment.py  test_exceptions.py  test_find.py  test_generate_context.py  test_generate_copy_without_render.py  test_generate_copy_without_render_override.py  test_generate_file.py  test_generate_files.py  test_generate_hooks.py  test_get_config.py  test_get_user_config.py  test_hooks.py  test_log.py  test_main.py  test_mlpstamps_local_no_input.py  test_mlpstamps_local_with_input.py  test_mlpstamps_nested_templates.py  test_output_folder.py  test_pre_prompt_hooks.py  test_prompt.py  test_read_repo_password.py  test_read_user_choice.py  test_read_user_dict.py  test_read_user_variable.py  test_read_user_yes_no.py  test_repo_not_found.py  test_specify_output_dir.py  test_templates.py  test_time_extension.py  test_utils.py
tests/fake-nested-templates/: mlpstamps.json
tests/fake-repo-bad-json/{{mlpstamps.repo_name}}/: README.rst
tests/fake-repo-dict/{{cookiecutter.project_slug}}/: README.md
tests/fake-repo-replay/: cookiecutter.json
tests/fake-repo-replay/{{mlpstamps.repo_name}}/: README.md
tests/fake-repo-tmpl/: mlpstamps.json
tests/fake-repo-tmpl-_mlpstamps/: mlpstamps.json
tests/files/: {% if mlpstamps.generate_file == 'y' %}cheese.txt{% endif %}  {{mlpstamps.generate_file}}.txt  {{mlpstamps.jsonify_file}}.txt
tests/hooks-abort-render/hooks/: post_gen_project.py  pre_gen_project.py
tests/hooks-abort-render/{{mlpstamps.repo_dir}}/: README.rst
tests/replay/: conftest.py  test_dump.py  test_load.py  test_replay.py
tests/repository/: test_abbreviation_expansion.py  test_determine_repo_dir_clones_repo.py  test_determine_repo_dir_finds_existing_cookiecutter.py  test_determine_repo_dir_finds_subdirectories.py  test_determine_repository_should_use_local_repo.py  test_is_repo_url.py  test_repository_has_cookiecutter_json.py
tests/test-config/: config-expand-user.yaml  config-expand-vars.yaml  invalid-config-w-multiple-docs.yaml  invalid-config.yaml  valid-config.yaml
tests/test-extensions/custom-extension-post/hooks/: post_gen_project.py
tests/test-extensions/custom-extension-post/{{cookiecutter.project_slug}}/: README.rst
tests/test-extensions/custom-extension-pre/hooks/: pre_gen_project.py
tests/test-extensions/hello_extension/: hello_extension.py
tests/test-extensions/local_extension/: mlpstamps.json
tests/test-extensions/local_extension/local_extensions/: main.py
tests/test-extensions/local_extension/{{cookiecutter.project_slug}}/: HISTORY.rst
tests/test-extensions/unknown/: cookiecutter.json
tests/test-extensions/unknown/{{mlpstamps.project_slug}}/: HISTORY.rst
tests/test-generate-binaries/input{{mlpstamps.binary_test}}/{{mlpstamps.binary_test}}/: readme.txt
tests/test-generate-context/: choices_template.json  nested_dict.json
tests/test-generate-copy-without-render-override/{{mlpstamps.repo_name}}/{{mlpstamps.repo_name}}-rendered/: README.md
tests/test-generate-copy-without-render/{{mlpstamps.repo_name}}/rendered/: not_rendered.yml
tests/test-generate-copy-without-render/{{mlpstamps.repo_name}}/{{mlpstamps.repo_name}}-rendered/: README.rst
tests/test-generate-files-line-end/{{cookiecutter.test_name}}/: something.txt
tests/test-generate-files-line-end/{{mlpstamps.test_name}}/folder/: in_folder.txt
tests/test-generate-files-line-end/{{mlpstamps.test_name}}/{{mlpstamps.folder_name}}/: {{mlpstamps.filename}}.py
tests/test-generate-files/input{{mlpstamps.food}}/: simple-with-conditions.txt  simple.txt
tests/test-output-folder/{{cookiecutter.test_name}}/{{cookiecutter.folder_name}}/: {{cookiecutter.filename}}.py
tests/test-pyhooks/hooks/: pre_prompt.py
tests/test-pyshellhooks/hooks/: pre_prompt.sh
tests/test-replay/: cookiedozer_load.json  invalid_replay.json  valid_replay.json
tests/test-templates/extends/templates/: base-requirements.jinja
tests/test-templates/include/{{mlpstamps.project_slug}}/: requirements.txt
tests/test-templates/no-templates/{{mlpstamps.project_slug}}/: requirements.txt
tests/test-templates/super/templates/: base-requirements.jinja
tests/undefined-variable/dir-name/{{mlpstamps.project_slug}}/: README.rst
tests/undefined-variable/file-content/{{cookiecutter.project_slug}}/: README.rst
tests/vcs/: test_clone.py  test_identify_repo.py  test_is_vcs_installed.py
tests/zipfile/: test_unzip.py
(+1 files in other folders)
